--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class = container >
             <h1> To my gorgeous girlfriend, Oceana.. </h1>
-            <a href = "valentine2.html"><button > Next </button></a>
+            <a href = "/valentine2.html"><button > Next </button></a>
         </div>
     </body>
 </html>
