--- a/valentine3.html
+++ b/valentine3.html
@@ -7,7 +7,7 @@
         <title> Will you be my valentine? </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/valentine.css">
+        <link rel="stylesheet" href="valentine.css">
     </head>
     <body>
         <div class = container >
