--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Will you be my valentine? </title>
+        <title> Bye lol </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="valentine.css">
     </head>
     <body>
         <div class = container >
-            <h1> To my gorgeous girlfriend, Oceana.. </h1>
+            <h1> To my ex girlfriend, Oceana.. </h1>
             <a href = "valentine2.html"><button > Next </button></a>
         </div>
     </body>
