--- a/valentine3.html
+++ b/valentine3.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Will you be my valentine? </title>
+        <title> Break up </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="valentine.css">
@@ -12,8 +12,8 @@
     <body>
         <div class = container >
             <img src="val.jpeg" alt="Description of the image">
-            <h1> And be my valentine? </h1>
-            <a href = "http://tinyurl.com/bdtdv3bn"><button id = yesButton> Yes </button></a>
+            <h1> And leave me alone? </h1>
+            <a><button id = yesButton> Yes </button></a>
             <button id = noButton> No </button>
             <script>
                 document.getElementById('noButton').addEventListener('click', function() {
